# rust-blockchain

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md
bitcoin/: Cargo.toml  PACKAGE_DOCUMENTATION.md  README.md  Settings.toml
bitcoin-api/: Cargo.toml
bitcoin-api/src/: client.rs  lib.rs  types.rs
bitcoin-desktop-ui-iced/: Cargo.toml
bitcoin-desktop-ui-iced/src/: api.rs  app.rs  main.rs  types.rs  update.rs  view.rs
bitcoin-desktop-ui-tauri/: index.html  package.json  postcss.config.js  tailwind.config.js  vite.config.ts  vitest.config.ts
bitcoin-desktop-ui-tauri/src/: App.tsx  index.css  main.tsx
bitcoin-desktop-ui-tauri/src-tauri/: Cargo.toml  tauri.conf.json
bitcoin-desktop-ui-tauri/src-tauri/capabilities/: main.json
bitcoin-desktop-ui-tauri/src-tauri/src/: main.rs
bitcoin-desktop-ui-tauri/src-tauri/src/commands/: blockchain.rs  health.rs  mining.rs  mod.rs  settings.rs  transactions.rs
bitcoin-desktop-ui-tauri/src-tauri/src/config/: mod.rs
bitcoin-desktop-ui-tauri/src-tauri/src/models/: mod.rs
bitcoin-desktop-ui-tauri/src-tauri/src/services/: bitcoin_api.rs  mod.rs
bitcoin-desktop-ui-tauri/src/components/: AppLayout.tsx  CommandPalette.tsx  ConfirmDialog.tsx  ConnectionBadge.tsx  JsonViewer.tsx  SettingsDialog.tsx  ShortcutProvider.tsx  Sidebar.tsx  StatusBar.tsx  ThemeProvider.tsx  Toast.tsx  TopBar.tsx
bitcoin-desktop-ui-tauri/src/hooks/: useClipboard.ts  useInvoke.ts
bitcoin-desktop-ui-tauri/src/lib/: commands.ts  utils.ts
bitcoin-desktop-ui-tauri/src/pages/blockchain/: AllBlocksPage.tsx  BlockByHashPage.tsx  BlockchainInfoPage.tsx  LatestBlocksPage.tsx
bitcoin-desktop-ui-tauri/src/pages/health/: HealthPage.tsx
bitcoin-desktop-ui-tauri/src/pages/mining/: GenerateBlocksPage.tsx  MiningInfoPage.tsx
bitcoin-desktop-ui-tauri/src/pages/transactions/: AddressTxPage.tsx  AllTransactionsPage.tsx  MempoolPage.tsx  MempoolTxPage.tsx
bitcoin-desktop-ui-tauri/src/store/: useAppStore.ts
bitcoin-desktop-ui-tauri/src/test/: setup.ts
bitcoin-desktop-ui-tauri/src/types/: index.ts
bitcoin-wallet-ui-iced/: Cargo.toml
bitcoin-wallet-ui-iced/src/: api.rs  app.rs  main.rs  runtime.rs  types.rs  update.rs  view.rs
bitcoin-wallet-ui-tauri/: BACKEND_STRUCTURE.md  index.html  package.json  tailwind.config.js  vite.config.ts  vitest.config.ts
bitcoin-wallet-ui-tauri/src/: App.tsx  index.css  main.tsx
bitcoin-wallet-ui-tauri/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
bitcoin-wallet-ui-tauri/src-tauri/capabilities/: main.json
bitcoin-wallet-ui-tauri/src-tauri/src/: lib.rs  main.rs
bitcoin-wallet-ui-tauri/src-tauri/src/commands/: health.rs  mod.rs  settings.rs
bitcoin-wallet-ui-tauri/src-tauri/src/config/: mod.rs
bitcoin-wallet-ui-tauri/src-tauri/src/models/: mod.rs
bitcoin-wallet-ui-tauri/src-tauri/src/services/: bitcoin_api.rs  mod.rs
bitcoin-wallet-ui-tauri/src/__mocks__/: clipboard.ts  tauri.ts
bitcoin-wallet-ui-tauri/src/components/: AppLayout.tsx  JsonViewer.tsx  ToastContainer.tsx
bitcoin-wallet-ui-tauri/src/hooks/: useCommands.ts
bitcoin-wallet-ui-tauri/src/lib/: utils.ts
bitcoin-wallet-ui-tauri/src/pages/settings/: SettingsPage.tsx
bitcoin-wallet-ui-tauri/src/store/: toastStore.ts
bitcoin-wallet-ui-tauri/src/test/: setup.ts  store.test.ts  utils.test.ts  utils.tsx
bitcoin-wallet-ui-tauri/src/types/: index.ts
bitcoin-web-ui/: README.md  index.html  package-lock.json  package.json  postcss.config.js  tailwind.config.js  vite.config.ts
bitcoin-web-ui/src/: App.tsx  index.css  main.tsx
bitcoin-web-ui/src/components/Blockchain/: AllBlocks.tsx  BlockByHash.tsx  BlockchainInfo.tsx  LatestBlocks.tsx
bitcoin-web-ui/src/components/Dashboard/: Dashboard.tsx
bitcoin-web-ui/src/components/Health/: HealthCheck.tsx  Liveness.tsx  Readiness.tsx
bitcoin-web-ui/src/components/Layout/: Layout.tsx  Navbar.tsx  Sidebar.tsx
bitcoin-web-ui/src/components/Mining/: GenerateBlocks.tsx  MiningInfo.tsx
bitcoin-web-ui/src/components/Transactions/: AddressTransactions.tsx  AllTransactions.tsx  (+2 more)
bitcoin-web-ui/src/contexts/: ApiConfigContext.tsx
bitcoin-web-ui/src/hooks/: useApi.ts
bitcoin-web-ui/src/pages/: Home.tsx
bitcoin-web-ui/src/services/: api.ts
bitcoin-web-ui/src/types/: api.ts
bitcoin-web-ui/src/utils/: date.ts
bitcoin/src/: config.rs  error.rs  lib.rs  main.rs  pow.rs  txmempool.rs
bitcoin/src/chain/: chainstate.rs  mod.rs  utxo_set.rs
bitcoin/src/crypto/: address.rs  hash.rs  keypair.rs  mod.rs  signature.rs
bitcoin/src/net/: mod.rs  net_processing.rs
bitcoin/src/node/: context.rs  miner.rs  mod.rs  peers.rs  server.rs  txmempool.rs
bitcoin/src/primitives/: block.rs  blockchain.rs  mod.rs  transaction.rs
bitcoin/src/store/: file_system_db_chain.rs  mod.rs
bitcoin/src/util/: functional_operations.rs  mod.rs  utils.rs
bitcoin/src/web/: auto_openapi.rs  mod.rs  openapi.rs  server.rs
bitcoin/src/web/handlers/: blockchain.rs  health.rs  mining.rs  mod.rs  transaction.rs  validation.rs
bitcoin/src/web/middleware/: auth.rs  cors.rs  logging.rs  mod.rs  rate_limit.rs
bitcoin/src/web/models/: errors.rs  mod.rs  requests.rs  responses.rs
bitcoin/src/web/routes/: api.rs  mod.rs  web.rs
bitcoin/tests/: README.md  integration_tests.rs  test_helpers.rs
ci/: README.md
ci/docker-compose/: README.md
ci/docker-compose/configs/: Dockerfile  Settings.toml  docker-compose.miner.yml  docker-compose.scale.sh  docker-compose.webserver.yml  docker-compose.yml  docker-entrypoint.sh  generate-compose-ports.sh  scale-down.sh  scale-up.sh  wait-for-node.sh
ci/kubernetes/: README.md
ci/kubernetes/manifests/: 01-namespace.yaml  02-configmap.yaml  03-secrets.yaml  04-pvc-miner.yaml  05-pvc-webserver.yaml  06-deployment-miner.yaml  06-statefulset-miner.yaml  07-deployment-webserver.yaml  08-service-miner-headless.yaml  08-service-miner.yaml  09-service-webserver-headless.yaml  09-service-webserver.yaml  10-hpa-webserver.yaml  11-hpa-miner.yaml  12-pod-disruption-budget.yaml  13-network-policy.yaml  14-configmap-rate-limit.yaml  15-redis.yaml  deploy.sh  kustomization.yaml  undeploy.sh
(+4 files in other folders)
