[package]
name = "bitcoin-wallet-ui"
version = "0.1.0"
edition = "2024"

[dependencies]
# UI framework
iced = { version = "0.14.0", features = ["advanced"] }

# Shared typed HTTP client for the node API.
# We need admin feature for wallet info, balance, and transaction history queries.
bitcoin-api = { path = "../bitcoin-api", features = ["client", "wallet", "admin"], default-features = false }

# JSON serialization
serde_json = "1.0"

# Database persistence with SQLCipher encryption
rusqlite = { version = "0.39", features = ["bundled-sqlcipher"] }

# Directory utilities for finding data directory
dirs = "6.0"

# Async runtime used by the API client in this UI process.
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
