[package]
name = "bitcoin-desktop-ui-tauri"
version = "0.1.0"
edition = "2021"

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-clipboard-manager = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
bitcoin-api = { path = "../../bitcoin-api", features = ["client", "wallet", "admin"], default-features = false }

[build-dependencies]
tauri-build = { version = "2", features = [] }
