[package]
name = "bitcoin-wallet-ui-tauri"
version = "0.1.0"
edition = "2021"

[lib]
name = "bitcoin_wallet_ui_tauri_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-clipboard-manager = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tracing = "0.1"
tracing-subscriber = "0.3"
dirs = "5.0"
rusqlite = { version = "0.31", features = ["bundled-sqlcipher"] }
bitcoin-api = { path = "../../bitcoin-api", features = ["client", "wallet", "admin"], default-features = false }
